fixed font of how-title's and added spacing to them

--- a/styles.css
+++ b/styles.css
@@ -116,6 +116,11 @@ h4 {
     padding: 10px 5px;
 }
 
+.how-title {
+    font-family: "NeueMontreal-bold", sans-serif;
+    margin-top: 50px;
+}
+
 p,
 li {
     font-family: "NeueMontreal", sans-serif;
@@ -285,7 +290,7 @@ li {
     }
 
     #how h3 {
-        font-family: "NeueMontreal", sans-serif;
+        font-family: "NeueMontreal-bold", sans-serif;
         margin-bottom: 5px;
     }
 
@@ -362,18 +367,18 @@ li {
         height: auto;
         margin-bottom: 30px;
     }
-    
+
     .graham img {
         display: block;
         width: 100%;
         height: 100%;
     }
-    
+
     .brands-container {
         width: 100%;
         height: auto;
     }
-    
+
     .brands-container img {
         display: block;
         width: 100%;
